[tool.poetry]
name = "rcv-robot-control"
version = "0.1.0"
description = ""
authors = ["hoischreck <hoischreck@gmx.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
